--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -275,6 +275,7 @@
             align-items: center;
             padding: 1rem;
             border: solid;
+            height: max-content;
             .section-title {
                 position: relative;
                 font-family: 'Raleway', sans-serif;
