--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -162,7 +162,6 @@
   height: -moz-max-content;
   height: max-content;
   padding: 1rem;
-  border: solid;
 }
 
 .App .About .about-container .SectionTitleGrouping .section-title {
@@ -423,10 +422,9 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 1rem;
-  border: solid;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .App .Projects .SectionTitleGrouping .section-title {
@@ -436,7 +434,6 @@
   font-size: 2rem;
   text-transform: uppercase;
   color: #252934;
-  border: solid red;
 }
 
 .App .Projects .SectionTitleGrouping .section-title-underline {
@@ -444,7 +441,6 @@
   background: #252934;
   height: 4px;
   width: 70px;
-  border: solid red;
 }
 
 .App .Projects .project-card-container {
