--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -410,7 +410,6 @@
 }
 
 .App .Projects .SectionTitleGrouping {
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -421,14 +420,13 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   padding: 1rem;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
 }
 
 .App .Projects .SectionTitleGrouping .section-title {
-  position: relative;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 2rem;
@@ -437,7 +435,6 @@
 }
 
 .App .Projects .SectionTitleGrouping .section-title-underline {
-  position: relative;
   background: #252934;
   height: 4px;
   width: 70px;
