--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -109,8 +109,10 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                justify-content: center;
                 height: max-content;
                 margin: 1rem;
+                border: solid;
                 .section-title {
                     font-family: 'Raleway', sans-serif;
                     font-weight: 600;
@@ -258,6 +260,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: flex-start;
         height: max-content;
         @media all and (min-width: 768px) {
             padding-left: 1rem;
@@ -274,12 +277,16 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: flex-start;
+            border: solid;
             .SectionTitleGrouping {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                justify-content: center;
                 height: max-content;
                 margin: 1rem;
+                border: solid;
                 .section-title {
                     font-family: 'Raleway', sans-serif;
                     font-weight: 600;
