--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -450,9 +450,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   margin: 1rem;
   border: solid;
 }
