--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -284,7 +284,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                height: fit-content;
+                height: max-content;
                 margin: 1rem;
                 border: solid;
                 .section-title {
